Revert "backend: add pack guids"
This reverts commit 6e0ca70f4b487d8cae72be9ef6907add430ce5b6.
