# backend/docs/swagger.json
@@ -99,7 +99,7 @@
                 }
             }
         },
-        "/packs/{guid}": {
+        "/packs/{id}": {
             "get": {
                 "description": "Download questions pack",
                 "produces": [
@@ -112,16 +112,10 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Pack guid",
-                        "name": "guid",
+                        "description": "Pack ID",
+                        "name": "id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Wanted package file name",
-                        "name": "filename",
-                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -246,10 +240,6 @@
                 "file_size": {
                     "type": "integer",
                     "example": 0
-                },
-                "guid": {
-                    "type": "string",
-                    "example": "00000000-0000-0000-0000-000000000000"
                 },
                 "name": {
                     "type": "string",
