# backend/internal/controller/http/v1/handlers.go
@@ -22,12 +22,11 @@ func addPack(ctx echo.Context) error {
 // @Description Download questions pack
 // @Tags packs
 // @Produce octet-stream
-// @Param guid path int true "Pack guid"
-// @Param filename query string false "Wanted package file name"
+// @Param id path int true "Pack ID"
 // @Success 200
 // @Failure 404 {object} models.ErrorResponse
 // @Failure 500 {object} models.ErrorResponse
-// @Router /packs/{guid} [get]
+// @Router /packs/{id} [get]
 func downloadPack(ctx echo.Context) error {
 	return nil
 }
